aws/rosa-hcp/camunda-versions/8.7/procedure/manifests/routes.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    annotations:
        haproxy.router.openshift.io/timeout: 300s
        route.openshift.io/termination: reencrypt
        route.openshift.io/destination-ca-certificate-secret: camunda-platform-internal-service-certificate
    name: camunda-zeebe-gateway-grpc
spec:
    host: zeebe-${DOMAIN_NAME}
    port:
        targetPort: gateway
    tls:
        termination: reencrypt
    to:
        kind: Service
        name: camunda-zeebe-gateway
    wildcardPolicy: None
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-keycloak
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-keycloak
    port:
        targetPort: http
    path: /auth/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-identity
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-identity
    port:
        targetPort: http
    path: /identity/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-operate
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-operate
    port:
        targetPort: http
    path: /operate/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-optimize
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-optimize
    port:
        targetPort: http
    path: /optimize/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-tasklist
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-tasklist
    port:
        targetPort: http
    path: /tasklist/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-zeebe-gateway
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-zeebe-gateway
    port:
        targetPort: rest
    path: /zeebe/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-console
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-console
    port:
        targetPort: http
    path: /console/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: route-camunda-webmodeler-restapi
spec:
    host: ${DOMAIN_NAME}
    to:
        kind: Service
        name: camunda-webmodeler-restapi
    port:
        targetPort: http
    path: /modeler/
    tls:
        termination: edge
        insecureEdgeTerminationPolicy: Redirect
